Using proper namespace for Kubernetes API operations related with shell access on remote clusters